--- a/les_5_NilTimofeev.ipynb
+++ b/les_5_NilTimofeev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "31b9cfea",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
    "id": "5e529a46",
    "metadata": {},
    "source": [
-    "$\\overline{X} \\pm Z_{\\alpha/2} * \\frac{\\sigma}{\\sqrt{n}}$, $\\sigma = 16$, $\\alpha = 0.05$, $\\overline{X} = 80$, $n = 256$, $Z_\\alpha/2 = \\pm 1.96$"
+    "$\\overline{X} \\pm Z_{\\alpha/2} * \\frac{\\sigma}{\\sqrt{n}}$, $\\sigma = 16$, $\\alpha = 0.05$, $\\overline{X} = 80$, $n = 256$, $Z_{\\alpha/2} = \\pm 1.96$"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "f114fcd1",
    "metadata": {},
    "outputs": [
@@ -75,12 +75,12 @@
    "id": "23066604",
    "metadata": {},
    "source": [
-    "$\\overline{X} \\pm t_{\\alpha/2} * \\frac{\\sigma_н}{\\sqrt{n}}$, $\\alpha = 0.05$, $n = 10 - 1 = 9$, $Z_\\alpha/2 = \\pm 2,262$"
+    "$\\overline{X} \\pm t_{\\alpha/2} * \\frac{\\sigma_н}{\\sqrt{n}}$, $\\alpha = 0.05$, $n = 10 - 1 = 9$, $Z_{\\alpha/2} = 2,262$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "435271fb",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "6.590000000000001"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "4abc9935",
    "metadata": {
     "scrolled": true
@@ -112,16 +112,16 @@
     {
      "data": {
       "text/plain": [
-       "0.42766809560686203"
+       "0.4508017549014448"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigma = data.std()\n",
+    "sigma = data.std(ddof=1)\n",
     "sigma"
    ]
   },
@@ -130,12 +130,12 @@
    "id": "8a9db92c",
    "metadata": {},
    "source": [
-    "$6.59 \\pm 2.262 * \\frac{0.42766809560686203}{\\sqrt{9}}$"
+    "$6.59 \\pm 2.262 * \\frac{0.4508017549014448}{\\sqrt{10}}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "411ba8e5",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "print([6.59 - 2.262*0.42766809560686203/3, 6.59 + 2.262*0.42766809560686203/3])"
+    "print([6.59 - 2.262*0.4508017549014448/(10**0.5), 6.59 + 2.262*0.4508017549014448/(10**0.5)])"
    ]
   },
   {
@@ -231,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "adf35a4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(198.5, 4.224926034855522)"
+       "(198.5, 4.453463071962462)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
    "source": [
     "data = np.array([202, 203, 199, 197, 195, 201, 200, 204, 194, 190])\n",
     "mean = data.mean()\n",
-    "sigma = data.std()\n",
+    "sigma = data.std(ddof=1)\n",
     "mean, sigma"
    ]
   },
@@ -264,23 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "a452b9c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0651074037450894"
+       "-1.0651074037450896"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(200 - 198.5) / (sigma/3)"
+    "(198.5 - 200) / (sigma/(10**0.5))"
    ]
   },
   {
